--- a/ListToBst/html/doxygen_crawl.html
+++ b/ListToBst/html/doxygen_crawl.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 <a href="_list_to_bst_8c.html"/>
+<a href="_list_to_bst_8c.html#a1e28dc1203dbc0394b7939d4f9983305"/>
+<a href="_list_to_bst_8c.html#a232250ea169aab55a2a36bb8ddc73364"/>
 <a href="_list_to_bst_8c.html#a3fa3ed808abcc03a73ebf819cdb6399b"/>
 <a href="_list_to_bst_8c.html#a41c9722acf82e3ff58a1e40ae9f55e9b"/>
 <a href="_list_to_bst_8c.html#a760efdb508f7164a660d6587b011895a"/>
+<a href="_list_to_bst_8c.html#a85a23b7ea4ca6bf4d083d795b9befbd1"/>
+<a href="_list_to_bst_8c.html#ae2b6798471b2af7347298cdd2b064ded"/>
 <a href="_list_to_bst_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_list_to_bst_8h.html"/>
 <a href="_list_to_bst_8h.html#a272e18fadc9facc613d1092451c54405"/>
