--- a/GrafoConnesso/html/doxygen_crawl.html
+++ b/GrafoConnesso/html/doxygen_crawl.html
@@ -11,8 +11,10 @@
 <a href="_grafo_8c.html"/>
 <a href="_grafo_8c.html#a0248b32a89809f585a30a4825038fa2e"/>
 <a href="_grafo_8c.html#a05e3085f070fd00422e6135fb37239a4"/>
+<a href="_grafo_8c.html#a07ef683139a9549302ade1f8fc85d4b1"/>
 <a href="_grafo_8c.html#a2138981cad6557ec4d5979a9ae583432"/>
 <a href="_grafo_8c.html#a5109df4375d8aa5d7497c84011f9b28c"/>
+<a href="_grafo_8c.html#aa61b9567194531e98bea7215d5c6f9c3"/>
 <a href="_grafo_8c.html#aa65cfb921a2cd7babec80dcebbedcbec"/>
 <a href="_grafo_8c.html#ab7057984eb2b6cae2c368c9be4815a96"/>
 <a href="_grafo_8c.html#aceb87bfe0234c098aa2d00c07defb82f"/>
@@ -25,6 +27,7 @@
 <a href="_grafo_8h.html#a05e3085f070fd00422e6135fb37239a4"/>
 <a href="_grafo_8h.html#a0a8059723bbd729dc2aea8709b995c10"/>
 <a href="_grafo_8h.html#a2138981cad6557ec4d5979a9ae583432"/>
+<a href="_grafo_8h.html#a2bbf262ec7270e66198c530ba17ec5d8"/>
 <a href="_grafo_8h.html#a6ea4d3fd612fad73260e26b99afccc38"/>
 <a href="_grafo_8h.html#aa65cfb921a2cd7babec80dcebbedcbec"/>
 <a href="_grafo_8h.html#ab27a17935caedd91258058c352971251"/>
