--- a/GrafoMatrice/html/doxygen_crawl.html
+++ b/GrafoMatrice/html/doxygen_crawl.html
@@ -9,15 +9,21 @@
 </head>
 <body>
 <a href="_graph_8c.html"/>
+<a href="_graph_8c.html#a010629b220f1d28c44b86d31e8ad9e80"/>
 <a href="_graph_8c.html#a08024be9441b8be3ff2d6b22bb1e0f38"/>
 <a href="_graph_8c.html#a30a974ef5c65e858c4e43d293bd91b1d"/>
+<a href="_graph_8c.html#a656cf023092e4e9eaa878d0be11d5d32"/>
+<a href="_graph_8c.html#ae4b83b99975ac5180d6b63ea023517ed"/>
 <a href="_graph_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_graph_8c.html#ae8d24e15f504393ea7b46c8d451aa2c4"/>
 <a href="_graph_8h.html"/>
+<a href="_graph_8h.html#a010629b220f1d28c44b86d31e8ad9e80"/>
 <a href="_graph_8h.html#a08024be9441b8be3ff2d6b22bb1e0f38"/>
 <a href="_graph_8h.html#a0c94bbeb31bba748d2897a168f62e9bc"/>
 <a href="_graph_8h.html#a30a974ef5c65e858c4e43d293bd91b1d"/>
 <a href="_graph_8h.html#a383e1bb6301567fd3fe4aef9e1c2111d"/>
+<a href="_graph_8h.html#a656cf023092e4e9eaa878d0be11d5d32"/>
+<a href="_graph_8h.html#ae4b83b99975ac5180d6b63ea023517ed"/>
 <a href="_graph_8h.html#ae8d24e15f504393ea7b46c8d451aa2c4"/>
 <a href="_graph_8h_source.html"/>
 <a href="annotated.html"/>
