--- a/GrafoMatrice/html/doxygen_crawl.html
+++ b/GrafoMatrice/html/doxygen_crawl.html
@@ -15,6 +15,7 @@
 <a href="_graph_8c.html#a30a974ef5c65e858c4e43d293bd91b1d"/>
 <a href="_graph_8c.html#a656cf023092e4e9eaa878d0be11d5d32"/>
 <a href="_graph_8c.html#aa010d68b40e57aa386bdf88ca0d65e0c"/>
+<a href="_graph_8c.html#ac2f3b9834d9a472fc52fce50d01c9ff5"/>
 <a href="_graph_8c.html#ae4b83b99975ac5180d6b63ea023517ed"/>
 <a href="_graph_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_graph_8c.html#ae8d24e15f504393ea7b46c8d451aa2c4"/>
