--- a/BST/html/doxygen_crawl.html
+++ b/BST/html/doxygen_crawl.html
@@ -11,17 +11,22 @@
 <a href="_binary_search_tree_8c.html"/>
 <a href="_binary_search_tree_8c.html#a3d17581b8f19bb421c9c415e4048b790"/>
 <a href="_binary_search_tree_8c.html#a5553d1c667bbdfa6326ce807412e5332"/>
+<a href="_binary_search_tree_8c.html#a5adcd1b4f6cec25d5d1785a048b81da2"/>
 <a href="_binary_search_tree_8c.html#a9dccf162948de4fcab23dda9e6f0b0d9"/>
 <a href="_binary_search_tree_8c.html#a9ff4b604a4169f1145588092e8b6340e"/>
 <a href="_binary_search_tree_8c.html#abc08c46591a41b0ad0348aebebb96772"/>
+<a href="_binary_search_tree_8c.html#ace545737a77ffd4e05685455d8adffec"/>
 <a href="_binary_search_tree_8c.html#ad942f51bc56f92914559bee857f2e769"/>
+<a href="_binary_search_tree_8c.html#addb5099a8d5a046c89a42e4fcfe3ee69"/>
 <a href="_binary_search_tree_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_binary_search_tree_8h.html"/>
 <a href="_binary_search_tree_8h.html#a22b952e9edaf865a98c8e1fb3a91104c"/>
 <a href="_binary_search_tree_8h.html#a3d17581b8f19bb421c9c415e4048b790"/>
 <a href="_binary_search_tree_8h.html#a5553d1c667bbdfa6326ce807412e5332"/>
 <a href="_binary_search_tree_8h.html#a9dccf162948de4fcab23dda9e6f0b0d9"/>
+<a href="_binary_search_tree_8h.html#a9ff4b604a4169f1145588092e8b6340e"/>
 <a href="_binary_search_tree_8h.html#abc08c46591a41b0ad0348aebebb96772"/>
+<a href="_binary_search_tree_8h.html#ace545737a77ffd4e05685455d8adffec"/>
 <a href="_binary_search_tree_8h.html#ad942f51bc56f92914559bee857f2e769"/>
 <a href="_binary_search_tree_8h_source.html"/>
 <a href="annotated.html"/>
@@ -35,8 +40,8 @@
 <a href="globals_type.html"/>
 <a href="index.html"/>
 <a href="structtree_node.html"/>
-<a href="structtree_node.html#aa3b5a75c6311d444575871239f7c2528"/>
+<a href="structtree_node.html#a09f70d5b69bbcdb1301f6bf364f9c18d"/>
+<a href="structtree_node.html#abd224b9939764b9ffe8e5c85287fa77b"/>
 <a href="structtree_node.html#ad8230766bd9ec494be43e0ac62181f95"/>
-<a href="structtree_node.html#af36a2b2dda259bb6ea90aef65d479f20"/>
 </body>
 </html>
