--- a/GrafoListe/html/doxygen_crawl.html
+++ b/GrafoListe/html/doxygen_crawl.html
@@ -13,9 +13,12 @@
 <a href="_grafo_8c.html#a05e3085f070fd00422e6135fb37239a4"/>
 <a href="_grafo_8c.html#a07ef683139a9549302ade1f8fc85d4b1"/>
 <a href="_grafo_8c.html#a2138981cad6557ec4d5979a9ae583432"/>
+<a href="_grafo_8c.html#a24fa52d7cd36f10545fa598edc4de838"/>
+<a href="_grafo_8c.html#a42715f65f02da52edc5b22021d8ae670"/>
 <a href="_grafo_8c.html#a5109df4375d8aa5d7497c84011f9b28c"/>
 <a href="_grafo_8c.html#aa61b9567194531e98bea7215d5c6f9c3"/>
 <a href="_grafo_8c.html#aa65cfb921a2cd7babec80dcebbedcbec"/>
+<a href="_grafo_8c.html#aafb9d0d2a62769e8075497a92fcd1ed9"/>
 <a href="_grafo_8c.html#ab7057984eb2b6cae2c368c9be4815a96"/>
 <a href="_grafo_8c.html#aceb87bfe0234c098aa2d00c07defb82f"/>
 <a href="_grafo_8c.html#ad6257a631e107864c53961f136f918dc"/>
@@ -46,6 +49,7 @@
 <a href="globals.html"/>
 <a href="globals_func.html"/>
 <a href="globals_type.html"/>
+<a href="globals_vars.html"/>
 <a href="index.html"/>
 <a href="struct_nodo.html"/>
 <a href="struct_nodo.html#a2538c5fd09bbe340b3bd6aee4bf5a3bd"/>
