--- a/Grafo-lista-pre-esame/html/doxygen_crawl.html
+++ b/Grafo-lista-pre-esame/html/doxygen_crawl.html
@@ -12,9 +12,12 @@
 <a href="_grafo_lista_8c.html#a0d0e29123be54028dca33ade03e88a1c"/>
 <a href="_grafo_lista_8c.html#a2f85f43a8c55ea36c1deba2e89d7f983"/>
 <a href="_grafo_lista_8c.html#a3982fffc38f018b4dbe2eed9224bfa29"/>
+<a href="_grafo_lista_8c.html#a3c18e091cdf6d24896deec04c607e49c"/>
+<a href="_grafo_lista_8c.html#a42715f65f02da52edc5b22021d8ae670"/>
 <a href="_grafo_lista_8c.html#a5233ac6314b38673568b7a09db72e04a"/>
 <a href="_grafo_lista_8c.html#a99a6bba2fab519ea6952060f199f758a"/>
 <a href="_grafo_lista_8c.html#aaee8bf04815d306e31a934027baf4cf8"/>
+<a href="_grafo_lista_8c.html#adfa1c4609ea39b2ae5399ac922fce8a2"/>
 <a href="_grafo_lista_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="_grafo_lista_8c.html#aec81058a974514c34ff7a7f200420ec0"/>
 <a href="_grafo_lista_8h.html"/>
@@ -31,6 +34,7 @@
 <a href="globals.html"/>
 <a href="globals_func.html"/>
 <a href="globals_type.html"/>
+<a href="globals_vars.html"/>
 <a href="index.html"/>
 <a href="structgraph.html"/>
 <a href="structgraph.html#a4f92067916c9ae2479ad490e423c70aa"/>
