--- a/Grafo-matrice-pre-esame/html/doxygen_crawl.html
+++ b/Grafo-matrice-pre-esame/html/doxygen_crawl.html
@@ -18,10 +18,15 @@
 <a href="globals_func.html"/>
 <a href="globals_type.html"/>
 <a href="grafo_m_8c.html"/>
+<a href="grafo_m_8c.html#a0a1209b8f5671a36a050d57353c7eaee"/>
 <a href="grafo_m_8c.html#a0f6a8cd2a2a4fdb61011be72bd461e72"/>
 <a href="grafo_m_8c.html#a5ac2b141d4dec975534610ca7ad771b4"/>
+<a href="grafo_m_8c.html#aaea88c3a4a99ddd8105f6327004f67ce"/>
+<a href="grafo_m_8c.html#aaee8bf04815d306e31a934027baf4cf8"/>
 <a href="grafo_m_8c.html#ad24c8a5393709f2785be72e59b0603ef"/>
+<a href="grafo_m_8c.html#ad2b9ab0d1502441d0eeaac423d7bfb39"/>
 <a href="grafo_m_8c.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
+<a href="grafo_m_8c.html#af0064c79f70e33b18d88bd4dd0e2c2bd"/>
 <a href="grafo_m_8c.html#af4743c213178ee4805479e04c5e6da6f"/>
 <a href="grafo_m_8h.html"/>
 <a href="grafo_m_8h.html#a3c937501dfc9b3de4b0119afd0b5d43f"/>
